# IntelliRAG

./: .gitignore  README.md
rag-platform/: .gitignore  README.md  objective.md  pyproject.toml
rag-platform/apps/api/: Dockerfile
rag-platform/apps/scheduler/: Dockerfile
rag-platform/apps/workers/: Dockerfile
rag-platform/data/eval/: golden_dataset.json
rag-platform/data/scalability/: capacity_report.json
rag-platform/docs/: engineering-journal.md
rag-platform/docs/architecture/: ingestion-audit-report.md  ingestion-implementation-guide.md  phase10-evaluation-platform-architecture.md  phase11-observability-architecture.md  phase12-scalability-architecture.md  phase5-indexing-architecture.md  phase7-reranking-architecture.md  phase8-context-assembly-architecture.md  phase9-llm-generation-architecture.md  v1-architecture-and-lifecycle.md  v1-ingestion-architecture.md
rag-platform/infra/compose/: docker-compose.dev.yml  docker-compose.yml
rag-platform/libs/observability/: __init__.py  api.py  collector.py  dashboard.py  health.py  metrics.py  pipeline.py  tracing.py
rag-platform/libs/scalability/: __init__.py  capacity_model.py
rag-platform/scripts/dev/: ingest_github_issue.py  validate_indexing_e2e.py
rag-platform/scripts/eval/: compare_baseline.py  compare_sota.py  pipeline_builder.py  run_chunking_benchmark.py  run_context_benchmark.py  run_full_evaluation.py  run_generation_benchmark.py  run_nomic_evaluation.py  run_quality_gate.py  run_reranking_benchmark.py  run_retrieval_benchmark.py  run_semantic_benchmark.py  run_sota_comparison.py  run_task_eval.py
rag-platform/scripts/observability/: demo_observed_query.py  (+1 more)
(+164 files in other folders)
