[project]
name = "rag-platform"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
	"celery>=5.3.6",
	"fastapi>=0.111.0",
	"httpx>=0.27.0",
	"numpy>=1.26.0",
	"redis>=5.0.0",
	"psycopg[binary]>=3.2.0",
	"pydantic>=2.7.0",
	"uvicorn>=0.30.0",
]

[project.optional-dependencies]
eval = [
	"ragas>=0.4.0",
	"datasets>=2.14.0",
	"langchain-ollama>=0.2.0",
	"sentence-transformers>=3.0.0",
]
eval-openai = [
	"ragas>=0.4.0",
	"datasets>=2.14.0",
	"langchain-openai>=0.2.0",
	"sentence-transformers>=3.0.0",
]
eval-all = [
	"ragas>=0.4.0",
	"datasets>=2.14.0",
	"langchain-ollama>=0.2.0",
	"langchain-openai>=0.2.0",
	"langchain-huggingface>=0.1.0",
	"sentence-transformers>=3.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*"]
exclude = ["tests*", "infra*", "configs*", "docs*", "scripts*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
